--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
-        "deploy": "gcloud compute scp --recurse ./build/* ${DEPLOY_GCE_USER}@${DEPLOY_GCE_HOST}:${DEPLOY_GCE_PATH}"
+		"deploy": "gcloud compute scp --recurse ./build/* ${DEPLOY_GCE_USER}@${DEPLOY_GCE_HOST}:${DEPLOY_GCE_PATH}"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
@@ -44,5 +44,8 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"@tanstack/table-core": "^8.21.2"
 	}
 }
