--- a/api/Gemfile
+++ b/api/Gemfile
@@ -10,3 +10,13 @@ gem "rack", "~> 3.1"
 gem "rackup", "~> 2.2"
 
 gem "puma", "~> 6.6"
+
+gem "nanoid", "~> 2.0"
+
+gem "activerecord", "~> 8.0"
+
+gem "sqlite3", "~> 2.6"
+
+gem "rerun", "~> 0.14.0"
+
+gem "kaminari", "~> 1.2"
