--- a/compose.yml
+++ b/compose.yml
@@ -5,18 +5,22 @@ services:
       context: ./nginx
       dockerfile: Dockerfile
     volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d
-      - ./front/static:/usr/share/finascope
+      - ./nginx/files/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/files/conf.d:/etc/nginx/conf.d/:ro
+      # - ./front/static:/usr/share/finascope:ro
     ports:
       - "8080:80"
+    depends_on:
+      - api
+      - front-dev
   api:
     container_name: api
     build:
       context: ./api
       dockerfile: Dockerfile
-    command: ["bundle", "exec", "rerun", "--background", "--", "rackup", "-o", "0.0.0.0", "-p", "9292"]
+    command: ["sh", "-c", "bundle config set frozen true && bundle install && bundle exec rerun --background --force-polling -- rackup -o 0.0.0.0 -p 9292"]
     volumes:
-      - ./api:/app
+      - ./api:/app:ro
   front-dev:
     container_name: front
     environment:
@@ -24,7 +28,8 @@ services:
     build:
       context: ./front
       dockerfile: Dockerfile
-    command: ["sh", "-c", "pnpm install --frozen-lockfile && pnpm dev --host 0.0.0.0"]
+      # NOTE: pnpm install is require stdin because using sh -c
+    command: ["sh", "-c", "yes | pnpm install --frozen-lockfile && pnpm dev --host 0.0.0.0"]
     volumes:
       - ./front:/app
       - /app/node_modules
