--- a/compose.yml
+++ b/compose.yml
@@ -18,7 +18,12 @@ services:
     build:
       context: ./api
       dockerfile: Dockerfile
-    command: ["sh", "-c", "bundle config set frozen true && bundle install && bundle exec rerun --background --force-polling -- rackup -o 0.0.0.0 -p 9292"]
+    command:
+      [
+        "sh",
+        "-c",
+        "bundle config set frozen true && bundle install && bundle exec rerun --background --force-polling -- rackup -o 0.0.0.0 -p 9292",
+      ]
     volumes:
       - ./api:/app
   front-dev:
@@ -29,7 +34,14 @@ services:
       context: ./front
       dockerfile: Dockerfile
       # NOTE: pnpm install is require stdin because using sh -c
-    command: ["sh", "-c", "yes | pnpm install --frozen-lockfile && pnpm dev --host 0.0.0.0"]
+    command:
+      [
+        "sh",
+        "-c",
+        "yes | pnpm install --frozen-lockfile && pnpm dev --host 0.0.0.0",
+      ]
+    ports:
+      - "5173"
     volumes:
       - ./front:/app
       - /app/node_modules
