--- a/compose.yml
+++ b/compose.yml
@@ -38,10 +38,8 @@ services:
       [
         "sh",
         "-c",
-        "yes | pnpm install --frozen-lockfile && pnpm dev --host 0.0.0.0",
+        "yes | pnpm install --frozen-lockfile && pnpm dev --host 0.0.0.0 --debug",
       ]
-    ports:
-      - "5173"
     volumes:
       - ./front:/app
       - /app/node_modules
