--- a/nginx/files/conf.d/finascope.conf
+++ b/nginx/files/conf.d/finascope.conf
@@ -13,8 +13,9 @@ server {
         deny  all;
     }
 
-    location /api {
-        proxy_pass   http://api:9292;
+    location /finascope/api/ {
+        rewrite ^/finascope/api/(.*)$ /api/$1 break;
+        proxy_pass   http://api:9292/;
     }
 
     location / {
