--- a/compose.yml
+++ b/compose.yml
@@ -1,18 +1,4 @@
 services:
-  nginx:
-    container_name: nginx
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
-    volumes:
-      - ./nginx/files/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/files/conf.d:/etc/nginx/conf.d/:ro
-      # - ./front/static:/usr/share/finascope:ro
-    ports:
-      - "8080:80"
-    depends_on:
-      - api
-      - front-dev
   api:
     container_name: api
     build:
@@ -22,24 +8,10 @@ services:
       [
         "sh",
         "-c",
-        "bundle config set frozen true && bundle install && bundle exec rerun --background --force-polling -- rackup -o 0.0.0.0 -p 9292",
+        "bundle config set frozen true && bundle install && bundle exec rackup -o 0.0.0.0 -p 9292",
       ]
     volumes:
       - ./api:/app
-  front-dev:
-    container_name: front
+      - ./db:/var/finascope/db
     environment:
-      - __VITE_ADDITIONAL_SERVER_ALLOWED_HOSTS=front
-    build:
-      context: ./front
-      dockerfile: Dockerfile
-      # NOTE: pnpm install is require stdin because using sh -c
-    command:
-      [
-        "sh",
-        "-c",
-        "yes | pnpm install --frozen-lockfile && pnpm dev --host 0.0.0.0 --debug",
-      ]
-    volumes:
-      - ./front:/app
-      - /app/node_modules
+      - FS_SQLITE_FILE=/var/finascope/db/finascope.sqlite3
