--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,7 @@
 services:
   api:
     container_name: api
+    restart: unless-stopped
     build:
       context: ./api
       dockerfile: Dockerfile
