--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -27,8 +27,10 @@ services:
     volumes:
       - ./api:/app
       - ./db:/var/finascope/db
+      - ./bundle_cache:/var/bundle_cache
     environment:
       - FS_SQLITE_FILE=/var/finascope/db/finascope.sqlite3
+      - BUNDLE_PATH=/var/bundle_cache
   front-dev:
     container_name: front
     environment:
