--- a/front/package.json
+++ b/front/package.json
@@ -33,11 +33,13 @@
     "eslint-plugin-svelte": "^2.46.1",
     "globals": "^15.15.0",
     "lucide-svelte": "^0.475.0",
+    "mode-watcher": "^1.0.6",
     "prettier": "^3.5.3",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "svelte": "^5.28.2",
     "svelte-check": "^4.1.6",
+    "svelte-sonner": "^0.3.28",
     "tailwind-merge": "^3.2.0",
     "tailwind-variants": "^0.3.1",
     "tailwindcss": "^3.4.17",
