ログイン情報でeffect

--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,7 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "format": "prettier --write .",
     "lint": "prettier --check . && eslint .",
-    "deploy": "gcloud compute scp --recurse ./build/* ${DEPLOY_GCE_USER}@${DEPLOY_GCE_HOST}:${DEPLOY_GCE_PATH}"
+    "deploy": "gcloud compute scp --recurse ./build/finascope/* ${DEPLOY_GCE_USER}@${DEPLOY_GCE_HOST}:${DEPLOY_GCE_PATH}"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.8",
